# CGAssign

./: .gitignore  .gitmodules  Readme.md
00Py3DRotate/: main.py
00PyFramework/: main.py
11PyFractalMountain/: main.py
12PyFractalTree/: main.py
12PyKochSnowflake/: main.py
13PyMaze/: main.py
21PyBouncingBall/: main.py
22PyCollision/: main.py
22PyGravity/: main.py
23PyMouseMaze/: main.py
30Report/: Problem1.ipynb  Report.tex
41HalfAngleReport/: Report.tex
42Gouraud/: main.py
50Report/: Main.tex
53LineSegment/: main.py
54Circle/: main.py
Framework/: CMakeLists.txt  Makefile  main.cpp
PyFractalMountain/: main.py
PyIFSFern/: main.py
PyIFSSierpinski/: main.py
PyKochSnowflake/: main.py
PyMaze/: main.py
