CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8 FATAL_ERROR)

PROJECT(MAIN)

SET(MAIN_EXE main)

SET(MAIN_SRCS main.cpp)

ADD_EXECUTABLE(${MAIN_EXE} ${MAIN_SRCS})

FIND_PACKAGE(PkgConfig)

PKG_SEARCH_MODULE(PC_OPENGL OpenGL GL gl opengl32)

INCLUDE_DIRECTORIES(${PC_OPENGL_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${MAIN_EXE} ${PC_OPENGL_LIBRARIES})

PKG_SEARCH_MODULE(PC_GLFW glfw3 glfw)

INCLUDE_DIRECTORIES(${PC_GLFW_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${MAIN_EXE} ${PC_GLFW_LIBRARIES})

TARGET_COMPILE_OPTIONS(${MAIN_EXE} PUBLIC -O2)
